--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <!-- اسم التطبيق -->
-    <meta name="apple-mobile-web-app-title" content="اخبار السودان">
-    <meta name="اخبار السودان" content="اخبار السودان">
+    <meta name="apple-mobile-web-app-title" content="انا السودان">
+    <meta name="انا السودان" content="انا السودان">
     <!-- تحديد أيقونة الموقع -->
     <link rel="icon" href="img/IMG_٢٠٢٥٠٢٢٣_٢٣٤٤٢٣_(192_x_192_pixel).jpg">
     
